devops/k8s/manifests/k04/policies-cli/disallow-privileged-escalation.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-escalation
  annotations:
    policies.kyverno.io/title: Disallow Privileged Escalation
    policies.kyverno.io/description: >-
      Privilege escalation, such as via set-user-ID or set-group-ID file mode, should not be allowed.
      This policy ensures the `allowPrivilegeEscalation` field is set to `false`.      
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: privileged-escalation
      match:
        any:
        - resources:
            kinds:
              - Deployment
      validate:
        message: >-
          Privileged escalation is disallowed. The fields spec.template.spec.containers[*].securityContext.allowPrivilegeEscalation
          must be set to `false`.
        pattern:
          spec:
            template:
              spec:  # =() check if the initContainers exist, if does, proceed to check if allowPrivilegeEscalation is false https://kyverno.io/docs/writing-policies/validate/#anchors
                =(initContainers):
                 - securityContext:
                    allowPrivilegeEscalation: false
                containers:
                 - securityContext:
                    allowPrivilegeEscalation: false
    - name: cronjob-privileged-escalation
      match:
        any:
        - resources:
            kinds:
              - CronJob
      validate:
        message: >-
          Privileged escalation is disallowed. The fields jobTemplate.spec.template.spec.containers[*].securityContext.allowPrivilegeEscalation must be set to `false`.
        pattern:
          spec:
            jobTemplate:
              spec:
                template:
                  spec:
                    containers:
                      - securityContext:
                          allowPrivilegeEscalation: false
