devops/k8s/manifests/k04/policies-cli/disallow-privileged-mode.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-mode
  annotations:
    policies.kyverno.io/title: Disallow Privileged Mode
    policies.kyverno.io/description: >-
      Privileged mode disables most security mechanisms and must not be allowed. This policy
      ensures Pods do not call for privileged mode.
spec:
  validationFailureAction: audit
  background: true
  rules:
    - name: privileged-mode
      match:
        any:
        - resources:
            kinds:
              - Deployment
      validate:
        message: >-
          Privileged mode is disallowed. The fields spec.template.spec.containers[*].securityContext.privileged
          must be set unset or set to `false`.
        pattern:
          spec:
            template:
              spec:
                =(ephemeralContainers):
                  - =(securityContext):
                      =(privileged): false # if privileged is set in the securityContext, check if it is set to false.
                =(initContainers):
                  - =(securityContext):
                      =(privileged): false
                containers:
                  - =(securityContext):
                      =(privileged): false
    - name: cronjob-privileged-mode
      match:
        any:
        - resources:
            kinds:
              - CronJob
      validate:
        message: >-
          The fields jobTemplate.spec.template.spec.containers[*].securityContext.privileged must be unset or set to `false`.
        pattern: 
          spec:
            jobTemplate:
              spec:
                template:
                  spec:
                    containers:
                      - =(securityContext):
                          =(privileged): false
